# thinx

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
.sqlx/: query-2df94510a823fb186b2e43f1d3c6882b869c145bb0658c6069ca6a661bb6f4e0.json  query-3090a6281e048722a360ae0c3bdcc0a06d71cf4fd8dc88b8338b270ae163bc5e.json  query-59228b471722771878cb799626c2980f2e8ccc6118bdf5a5caaa8f00fb0d891e.json  query-7e39e93496418375183827fee9174d483327858a4381918b8d74c39770b76e1c.json  query-9ce6858c83d9f9d3998011cbf252086042050f0db172ecb6e44adb8d1672b4ec.json  query-9cfa011fd0b6c5ca57c93175ee3206d0a9847c74789d08cd178c3b2fb256d4f6.json
migrations/: 20250325020824_updated_at.sql  20250327152323_thought.sql
queries/thought/: delete.sql  get.sql  get_id.sql  insert.sql  update.sql
src/: errors.rs  lib.rs  main.rs
src/models/: thought.rs
src/routes/: mod.rs  thought.rs
