[package]
name = "thinx"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["tracing", "macros"] }
derive_builder = "0.20.2"
dotenvy = "0.15.7"
serde = "1.0.219"
serde_json = { version = "1.0.140", features = ["preserve_order"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-rustls", "postgres", "time", "uuid"] }
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["serde-human-readable"] }
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "debug", "uuid", "preserve_order"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.0", features = ["axum", "vendored"] }
uuid = { version = "1.16.0", features = ["v4", "serde", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.20.0", features = ["derive"] }
# keep this until https://github.com/juhaku/utoipa/issues/1345 is fixed and utoipa-swagger-ui 9.0.1 is released
zip = "=2.3.0"
